--- a/src/styles.css
+++ b/src/styles.css
@@ -12,6 +12,7 @@ body {
   flex-direction: column;
 
   padding-top: 30px;
+  font-size: 13px;
 }
 
 h1 {
@@ -26,7 +27,9 @@ h1 {
 }
 
 .db {
-  height: 150px;
+  position: relative;
+  height: 200px;
+  padding: 5px;
   width: 150px;
   border: 1px solid #dadada;
 }
@@ -84,4 +87,41 @@ h1 {
 #tb {
   grid-column: 2/4;
   grid-row: 2/4;
+}
+
+.laso{
+  background: rgb(249, 246, 209);
+}
+.Cung{
+  position: absolute;
+
+}
+.anCung{
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.chinhTinh{
+  height: 40px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.phuTinh {
+  display: grid;
+  font-size: 11px;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 10px;
+}
+
+.trangSinh{
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translate(-50%);
+  
+}
+.ung{
+  display: none;
 }
